developer/tryout/samples/gql-sample-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-faker
  labels:
    app: graphql-faker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql-faker
  template:
    metadata:
      labels:
        app: graphql-faker
    spec:
      containers:
        - name: graphql-faker
          image: apisguru/graphql-faker
          args: ["--open=false", "/etc/graphql-faker/schema.graphql"]
          ports:
            - containerPort: 9002
          volumeMounts:
            - name: schema-volume
              mountPath: /etc/graphql-faker
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: schema-volume
          configMap:
            name: graphql-faker-schema
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-faker-service
spec:
  type: ClusterIP
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
  selector:
    app: graphql-faker
