developer/tryout/samples/qsg-sample-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: employee-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-app
  template:
    metadata:
      labels:
        app: employee-app
    spec:
      containers:
        - name: employee-service-container
          image: sega1234/json-server-service:latest
          ports:
            - containerPort: 80
