developer/tryout/samples/sample-backend-weighted.yaml
# --------------------------------------------------------------------
# Copyright (c) 2025, WSO2 LLC. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

# Demo API 1 for Weighted Routing
apiVersion: v1
kind: Service
metadata:
  name: demo-api-1-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
    - port: 81
      targetPort: 81
  selector:
    app: demo-api-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-1-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-1
  template:
    metadata:
      labels:
        app: demo-api-1
    spec:
      containers:
        - name: demo-api-1-container
          image: vinupathenuka/demo-api-1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 81
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "100m"
---
# Demo API 2 for Weighted Routing
apiVersion: v1
kind: Service
metadata:
  name: demo-api-2-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
    - port: 43
      targetPort: 43
  selector:
    app: demo-api-2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-2-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-2
  template:
    metadata:
      labels:
        app: demo-api-2
    spec:
      containers:
        - name: demo-api-2-container
          image: vinupathenuka/demo-api-2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 43
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "100m"
---
# Demo API 3 for Weighted Routing
apiVersion: v1
kind: Service
metadata:
  name: demo-api-3-service
  namespace: backend
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: demo-api-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-3-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-3
  template:
    metadata:
      labels:
        app: demo-api-3
    spec:
      containers:
        - name: demo-api-3-container
          image: vinupathenuka/demo-api-3:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "100m"
