developer/tryout/samples/student-sample-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-backend
spec:
  selector:
    app: student-backend
  ports:
    - protocol: TCP
      port: 6565
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-backend
  labels:
    app: student-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-backend
  template:
    metadata:
      labels:
        app: student-backend
    spec:
      containers:
        - name: student-backend
          image: sega1234/student-service:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
