developer/tryout/samples/ai-api-model-routing.yaml
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "chat-http-route-production-resource"
  labels:
    api-name: "chat-service-api-prod-sand"
    api-version: "1.0"
spec:
  hostnames:
    - "default.gw.wso2.com"
  rules:
    - matches:
        - path:
            type: "RegularExpression"
            value: "/get"
          method: "GET"
      filters:
        - type: "URLRewrite"
          urlRewrite:
            path:
              type: "ReplaceFullPath"
              replaceFullPath: "/get"
      backendRefs:
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-1"
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-2"
    - matches:
        - path:
            type: "RegularExpression"
            value: "/chat/completions"
          method: "POST"
      filters:
        - type: "URLRewrite"
          urlRewrite:
            path:
              type: "ReplaceFullPath"
              replaceFullPath: "/chat/completions"
      backendRefs:
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-1"
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-2"
  parentRefs:
    - group: "gateway.networking.k8s.io"
      kind: "Gateway"
      name: "wso2-apk-default"
      sectionName: "httpslistener"
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "chat-http-route-sandbox-resource"
  labels:
    api-name: "chat-service-api-prod-sand"
    api-version: "1.0"
spec:
  hostnames:
    - "default.sandbox.gw.wso2.com"
  rules:
    - matches:
        - path:
            type: "RegularExpression"
            value: "/get"
          method: "GET"
      filters:
        - type: "URLRewrite"
          urlRewrite:
            path:
              type: "ReplaceFullPath"
              replaceFullPath: "/get"
      backendRefs:
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-1"
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-2"
    - matches:
        - path:
            type: "RegularExpression"
            value: "/chat/completions"
          method: "POST"
      filters:
        - type: "URLRewrite"
          urlRewrite:
            path:
              type: "ReplaceFullPath"
              replaceFullPath: "/chat/completions"
      backendRefs:
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-1"
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "chat-backend-2"
  parentRefs:
    - group: "gateway.networking.k8s.io"
      kind: "Gateway"
      name: "wso2-apk-default"
      sectionName: "httpslistener"
