developer/tryout/samples/sample-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-http-route-http-bin-api-p1
spec:
  hostnames:
    - prod.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: httpslistener
  rules:
  - backendRefs:
    - group: dp.wso2.com
      kind: Backend
      name: insecure-backend
    matches:
    - path:
        type: PathPrefix
        value: /http-bin-api/1.0.8/get/
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /get
  - backendRefs:
    - group: dp.wso2.com
      kind: Backend
      name: secure-backend
    matches:
    - path:
        type: PathPrefix
        value: /http-bin-api/1.0.8/secure/post/
      method: POST
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /post
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prod-http-route-http-bin-api-p2
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: httpslistener
  rules:
    - backendRefs:
        - group: dp.wso2.com
          kind: Backend
          name: secure-backend
      matches:
        - path:
            type: PathPrefix
            value: /http-bin-api/1.0.8/secure/get/
          method: GET
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /get
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Scope
            name: pet
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sand-http-route-http-bin-api
spec:
  hostnames:
    - sand.gw.wso2.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      sectionName: httpslistener
  rules:
    - backendRefs:
      - group: dp.wso2.com
        kind: Backend
        name: insecure-backend
      matches:
        - path:
            type: PathPrefix
            value: /http-bin-api/1.0.8/get
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /get
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: custom-response-header
                value: myvalue
            remove:
              - access-control-allow-credentials
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: custom-request-header
                value: myvalue
        - type: ExtensionRef
          extensionRef:
            group: dp.wso2.com
            kind: Authentication
            name: sand-http-bin-authentication
