developer/tryout/samples/sample-weighted-routing.yaml
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "http-route"
  namespace: default
  labels:
    api-name: "backend-service-api"
    api-version: "1.0"
spec:
  hostnames:
  - "default.gw.example.com"
  rules:
  - matches:
    - path:
        type: "RegularExpression"
        value: "/demo"
      method: "GET"
    filters:
    - type: "URLRewrite"
      urlRewrite:
        path:
          type: "ReplaceFullPath"
          replaceFullPath: "/demo"
    backendRefs:
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-1-api"
      weight: 30
    - group: "dp.wso2.com"
      kind: "Backend"
      name: "backend-2-api"
      weight: 10
    - group: "dp.wso2.com"  
      kind: "Backend"
      name: "backend-3-api"
      weight: 60
  parentRefs:
  - group: "gateway.networking.k8s.io"
    kind: "Gateway"
    name: "wso2-apk-default"
    sectionName: "httpslistener"
